Overview of changes in xtickertape-1.6.0

* Added a `Help' menu and an `About' box.

* The `not' operator in a usenet subscription no longer generates a
  bogus elvin subscription.

* show-url can now cope with URLs which contain spaces.

Overview of changes in xtickertape-1.5.10

* Fixed a bug in the reconnect code in which the delay between reconnect
  attempts was never being reset to the initial delay.

* Added the -nw option to show-url to placate users who only want to
  have one Nescape window open at a time.  Also made it possible to
  specify a difference netscape executable by setting the NETSCAPE
  environment variable.

Overview of changes in xtickertape-1.5.9

* Using configure to find metamail so that it doesn't have to be in
  the user's path at runtime

* Fixed a bug in show-url for the case where the URL is provided on
  the command-line

Overview of changes in xtickertape-1.5.8

* add the actions to the scroller widget to speed up/slow down the
  scrolling speed.  Lots of fun, but probably not too useful

Overview of changes in xtickertape-1.5.7

* Fixed the way notifications get their timeout so that xtickertape
  doesn't dump core if a notification with a matching TICKERTAPE
  arrives without a TIMEOUT entry.  Can also take a FLOAT timeout
  (although this is simply rounded off to the nearest integer)

* Added estore.c to the distribution.  This is a hacked version of
  mh's rcvstore which generates a notification from e-mail headers
  after it files a the e-mail message

* Fixed a really stupid bug which caused xtickertape to dump core if
  the user's TICKERDIR environment variable wasn't set.

Overview of changes in xtickertape-1.5.6

* show-url now converts troublesome characters (comma, right paren) to 
  their HTML escape codes before sending a URL to netscape

* Added a man page for show-url

Overview of changes in xtickertape-1.5.5

* Fixed a bug in main.c which made xtickertape crash unless TICKERDIR
  was set to something